# SATySFi-make-latex

./: .gitignore  LICENSE  README.md  Satyristes  bxtexlogo.satyh-latex  code.satyh-latex  geometry.satyh-latex  itemize.satyh-latex  js-test.saty  latex-base.satyh-latex  makefile  satysfi-make-latex-doc.opam  satysfi-make-latex.opam  scsnowman.satyh-latex  small-jsarticle.satyh-jsarticle
doc/: manual-ja.saty
src/: bxtexlogo.satyh-latex  code.satyh-latex  geometry.satyh-latex  latex-base.satyh-latex  scsnowman.satyh-latex  small-jsarticle.satyh-latex  url.satyh-latex
test/: js-test.saty  local.satyh-latex
