opam-version: "2.0"
name: "satysfi-make-latex-doc"
version: "0.2.0"
synopsis: "Document of make-latex Package"
description: """
Document of make-latex Package.
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/SATySFi-make-latex"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-make-latex.git"
bug-reports: "https://github.com/puripuri2100/SATySFi-make-latex/issues"
depends: [
  "satysfi" { >= "0.0.5" & < "0.0.6" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }
  "satysfi-dist"
  "satysfi-make-latex" {= "%{version}%"}
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "make-latex-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "make-latex-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]